Modifiy Changes on delete and search options

--- a/CarApplication/Views/BrandModel/Delete.cshtml
+++ b/CarApplication/Views/BrandModel/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ManufacturerID)
+            @Html.DisplayNameFor(model => model.Manufacturer)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ManufacturerID)
+            @Html.DisplayFor(model => model.Manufacturer.BrandName)
         </dd>
 
     </dl>
