--- a/CarApplication/Views/BrandModel/Index.cshtml
+++ b/CarApplication/Views/BrandModel/Index.cshtml
@@ -4,11 +4,20 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>List of Car Models</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "BrandModel", FormMethod.Get))
+{
+    <p>
+        Find by Model Name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
