--- a/CarApplication/Views/Manufacturer/Index.cshtml
+++ b/CarApplication/Views/Manufacturer/Index.cshtml
@@ -4,11 +4,19 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>List of Car Brands</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Manufacturer", FormMethod.Get))
+{ 
+    <p>
+        Find by Brand Name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
