--- a/CarApplication/Views/Home/Index.cshtml
+++ b/CarApplication/Views/Home/Index.cshtml
@@ -1,31 +1,80 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<!-- HOME -->
+<div class="" id="popupContainer">
+    <div class="breadcrumbs text-muted">
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
+        <div class="adminAcc">
+            <a class="" href="" data-ng-click="vm.adminAccount($event)" data-ng-if="!vm.editmode">
+                <i class="fa fa-cog"></i>
+            </a>
+        </div>
+    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="" ng-if="!vm.content.length && !vm.busy">
+        <div class="col-lg-9">
+            <div>
+                <h1 class="no-margin-bottom">Welcome to Cars Online</h1>
+                <hr />
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras varius eleifend orci sit amet volutpat.
+                    Cras posuere elementum nisi id placerat. In aliquet, risus et molestie pulvinar, tortor velit molestie ipsum,
+                    eget imperdiet justo libero eget velit. Morbi aliquet ante ligula, ac cursus arcu dictum eu.
+
+                </p>
+                <p>
+                    Proin pharetra nisl quis varius luctus. Sed eleifend rutrum nunc ut ullamcorper. Aenean sed auctor mauris,
+                    nec scelerisque enim. Nunc nec erat facilisis, finibus risus in, iaculis dolor. Vestibulum et elit molestie,
+                    finibus erat et, hendrerit leo. In ac ligula sit amet nisi imperdiet mattis.
+                </p>
+            </div>
+            <div>
+                <h1 class="no-margin-bottom">Announcement !!!</h1>
+                <hr />
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras varius eleifend orci sit amet volutpat.
+                    Cras posuere elementum nisi id placerat. In aliquet, risus et molestie pulvinar, tortor velit molestie ipsum,
+                    eget imperdiet justo libero eget velit. Morbi aliquet ante ligula, ac cursus arcu dictum eu.
+
+                </p>
+                <p>
+                    Proin pharetra nisl quis varius luctus. Sed eleifend rutrum nunc ut ullamcorper. Aenean sed auctor mauris,
+                    nec scelerisque enim. Nunc nec erat facilisis, finibus risus in, iaculis dolor. Vestibulum et elit molestie,
+                    finibus erat et, hendrerit leo. In ac ligula sit amet nisi imperdiet mattis.
+                </p>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+            <br />
+            <div class="" style="">
+                <div class="boxTitle">
+                    Mission
+                </div>
+                <p style="padding: 0 10px">
+                    Proin pharetra nisl quis varius luctus. Sed eleifend rutrum nunc ut ullamcorper.
+                </p>
+                <p style="padding: 0 10px">
+                    Aenean sed auctor mauris, nec scelerisque enim. Nunc nec erat facilisis, finibus risus in, iaculis dolor.
+                </p>
+
+            </div>
+
+            <div class="" style="">
+                <div class="boxTitle">
+                    Vision
+                </div>
+                <p style="padding: 0 10px">
+                    Proin pharetra nisl quis varius luctus. Sed eleifend rutrum nunc ut ullamcorper.
+                </p>
+                <p style="padding: 0 10px">
+                    Aenean sed auctor mauris, nec scelerisque enim. Nunc nec erat facilisis, finibus risus in, iaculis dolor.
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+    <div ta-bind ng-model="vm.content" class="word-break"></div>
+
 </div>
